--- a/week2_CSS_animation/index.html
+++ b/week2_CSS_animation/index.html
@@ -19,5 +19,11 @@
       </div>
     </div>
     <h1>點擊人物進入簡報</h1>
+    <h1>
+      <a
+        href="https://github.com/jaosn60810/2021_cm_frontend_selfStudy/tree/main/week2_CSS_animation"
+        >點擊觀看程式碼</a
+      >
+    </h1>
   </body>
 </html>
